--- a/src/defs.hpp.in
+++ b/src/defs.hpp.in
@@ -132,8 +132,8 @@
 #define @COMPACT_FD@
 
 // refinement strategy
-#define Z4C_REF_BOX_IN_BOX
-#define NO_Z4C_REF_BALL_AT_PUNCTURE
+#define @Z4C_REF_BOX_IN_BOX@
+#define @Z4C_REF_SPHERES@
 
 // configure.py dict(definitions) Boolean string macros:
 // (these options have the latter (false) option as defaults, unless noted otherwise)
