--- a/src/defs.hpp.in
+++ b/src/defs.hpp.in
@@ -101,6 +101,7 @@
 #define NWAVE @NWAVE_VALUE@
 #define NSCALARS @NUMBER_PASSIVE_SCALARS@
 #define NGHOST @NUMBER_GHOST_CELLS@
+#define NGHOST_RAD @NUMBER_RAD_GHOST_CELLS@
 #define MAX_NSTAGE 5     // maximum number of stages per cycle for time-integrator
 #define MAX_NREGISTER 3  // maximum number of (u, b) register pairs for time-integrator
 
