--- a/Makefile.in
+++ b/Makefile.in
@@ -12,6 +12,7 @@ RSOLVER_DIR = @RSOLVER_DIR@
 MPIFFT_FILE = @MPIFFT_FILE@
 CHEMNET_FILE = @CHEMNET_FILE@
 CHEMISTRY_FILE = @CHEMISTRY_FILE@
+ODE_SOLVER_FILE = @ODE_SOLVER_FILE@
 RADIATION_FILE = @RADIATION_FILE@
 
 # General compiler specifications
@@ -44,6 +45,7 @@ SRC_FILES := $(wildcard src/*.cpp) \
 	     src/eos/eos_scalars.cpp \
 		 $(wildcard $(CHEMISTRY_FILE)) \
 		 $(CHEMNET_FILE) \
+		 $(wildcard src/chemistry/$(ODE_SOLVER_FILE)) \
 		 $(wildcard src/radiation/*.cpp) \
 		 $(wildcard src/radiation/integrators/$(RADIATION_FILE)) \
 	     $(wildcard src/fft/*.cpp) \
