--- a/src/defs.hpp.in
+++ b/src/defs.hpp.in
@@ -51,6 +51,9 @@
 // ChemNetwork class header file included in species.hpp
 #define CHEMNETWORK_HEADER "@CHEMNETWORK_HEADER@"
 
+// CVODE solver option (CVODE or NO_CVODE)
+#define @CVODE_OPTION@
+
 // include radiative transfer? default=0 (false)
 #define RADIATION_ENABLED @RADIATION_ENABLED@
 
