--- a/src/defs.hpp.in
+++ b/src/defs.hpp.in
@@ -109,6 +109,7 @@
 #define NFIELD @NFIELD_VARIABLES@
 #define NWAVE @NWAVE_VALUE@
 #define NSCALARS @NUMBER_PASSIVE_SCALARS@
+#define NSPECIES @NUMBER_CHEMICAL_SPECIES@
 #define NGHOST @NUMBER_GHOST_CELLS@
 #define MAX_NSTAGE 6     // maximum number of stages per cycle for time-integrator
 #define MAX_NREGISTER 3  // maximum number of (u, b) register pairs for time-integrator
