--- a/src/defs.hpp.in
+++ b/src/defs.hpp.in
@@ -127,6 +127,7 @@
 #define TINY_NUMBER 1.0e-20
 #define HUGE_NUMBER 1.0e+36
 #define SQR(x) ( (x)*(x) )
+#define CUBE(x) ( (x)*(x)*(x) )
 #define SIGN(x) ( ((x) < 0.0) ? -1.0 : 1.0 )
 
 #ifdef ENABLE_EXCEPTIONS
