changed configure options and macro names for chem_radiation or CHEMRADIATION

--- a/Makefile.in
+++ b/Makefile.in
@@ -13,7 +13,7 @@ MPIFFT_FILE = @MPIFFT_FILE@
 CHEMNET_FILE = @CHEMNET_FILE@
 CHEMISTRY_FILE = @CHEMISTRY_FILE@
 ODE_SOLVER_FILE = @ODE_SOLVER_FILE@
-RADIATION_FILE = @RADIATION_FILE@
+CHEMRADIATION_FILE = @CHEMRADIATION_FILE@
 
 # General compiler specifications
 
@@ -47,7 +47,7 @@ SRC_FILES := $(wildcard src/*.cpp) \
 		 $(CHEMNET_FILE) \
 		 $(wildcard src/chemistry/$(ODE_SOLVER_FILE)) \
 		 $(wildcard src/chem_rad/*.cpp) \
-		 $(wildcard src/chem_rad/integrators/$(RADIATION_FILE)) \
+		 $(wildcard src/chem_rad/integrators/$(CHEMRADIATION_FILE)) \
 	     $(wildcard src/fft/*.cpp) \
 	     $(wildcard src/field/*.cpp) \
 	     $(wildcard src/field/field_diffusion/*.cpp) \
